--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,21 +3,22 @@ name: demo CI/CD
 on:
   
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+    branches: 
+          - main
+          - feature 
+  
   workflow_dispatch:
 
 
 jobs:
  
-  build:
+ build:
     
-    runs-on: ubuntu-latest
+     runs-on: ubuntu-latest
 
    
-    steps:
+     steps:
+    
       - name: Checkot repository
       - uses: actions/checkout@v4
 
