Change checkout action to version 6.0.1
Updated checkout action version in workflow.

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,7 +19,7 @@ jobs:
      steps:
     
       - name: Checkot repository
-      - uses: actions/checkout@v1
+        uses: actions/checkout@v6.0.1
 
       
       - name: List files
